tests/fails/vectype.t
require("fail")
terra foo()
	var a : vector(&int,3)
end

foo:compile()
